...
            onReloadDays={onReloadDays}
          />
        )}
      </Tab.Screen>


      <Tab.Screen name="Me"
        options={{ tabBarIcon: ({ focused }) => <TabIcon focused={focused} emoji="👤" /> }}
      >
        {renderSettings}
      </Tab.Screen>

      <Tab.Screen name="Feedback"
...
